Login front-end finished

--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
               <p class="card-text">BETA : Utilisez le couple ("admin", "admin") afin de vous connecter </p>
            </div>
         <div class="col-md-8 mx-auto">
-            <form method="post" action="">
+            <form method="POST" action="">
                 <div class="form-group my-3">
                     <div class="input-group">
                         <div class="input-group-prepend"><span class="input-group-text" id="basic-addon1">@</span></div>
